deployments/harmikkelhatpaa/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: harmikkelhatpaa-svc
    app.kubernetes.io/version: 2021.6.3
  name: harmikkelhatpaa-svc
  namespace: funprojects
spec:
  ports:
  - name: http-harmikkelhatpaa
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https-harmikkelhatpaa
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app.kubernetes.io/name: harmikkelhatpaa
  sessionAffinity: None
  type: ClusterIP
